--- a/Nedersaksisch_V.mw
+++ b/Nedersaksisch_V.mw
@@ -45,7 +45,11 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 **''promusselken''
 *[[Drèents]]: ...
 *[[Grönnegs]]: ''schaid''*
-*[[Sallaans]]: ...
+*[[Sallaans]]: 
+**''kutte''
+**''fluite''
+**''kruus''
+**''splete''
 *[[Stellingwarfs]]: ...
 *[[Tweants]]: 
 **''flamoeze''
