--- a/Nedersaksisch_V.mw
+++ b/Nedersaksisch_V.mw
@@ -50,6 +50,7 @@ In 't Nedersaksisch bin de benamingen veur de geslachsdelen vake een bietjen ''g
 **''fluite''
 **''kruus''
 **''splete''
+**''deuze''
 *[[Stellingwarfs]]: ...
 *[[Tweants]]: 
 **''flamoeze''
