*Empty MediaWiki Message*

--- a/Japan.mw
+++ b/Japan.mw
@@ -1,21 +1,21 @@
-{{Laandtabel-gos
-| noaminlaandstoal = 日本国 <br /><small>Nippon</small>
-| naam = Japan
-| vlage = [[Bestaand:Flag of Japan.svg|120px|border|Vlage van Japan]]
-| woapen = [[Bestaand:Imperial Seal of Japan.svg|90px|Woapen van Japan]]
-| breedtegroad = 35/10//N | lengtegroad = 136///E | region = JP
-| lokoatsie = LocationMapJapan.png
-| toalen = [[Japans]]
-| heufdstad = [[Tokio]]
-| religie = [[Shintoïsme]], [[boeddhisme]]
-| regeernsvörm = [[Parlementaire monaarchie]] ([[Kaizerriek]])
-| km2 = 377.835 | pctwoater = 0,8%
-| inwoner = 127.264.438 (2008) | dichtte = 336,9
-| munt = [[Yen]] | valutakode = JPY
-| tiedzone =  +9
-| volkslaid = [[Kimi Ga Yo]]
-| feestdag = ## ####
-| tld = jp | laandkode = JPN | til = 81
+{{Landtabel
+| nameinlandstaal = 日本国 <br /><small>Nippon</small>
+| name = Japan
+| vlagge = Flag of Japan.svg
+| wåpen = Imperial Seal of Japan.svg
+| breyddegråd = 35/10//N | längdegråd = 136///E | region = JP
+| lokaty = LocationMapJapan.png
+| talen = [[japans]]k
+| höyvdstad = [[Tokio]]
+| religy = [[shintoïsme|sjintoisme]], [[boeddhisme|buddhisme]]
+| regeringsform = [[parlementäre monarchy]] ([[keiserryk]])
+| km2 = 377.973 | pctwater = 3,55
+| inwoaners = 126.317.000 (2019) | dichtheid = 334
+| münteynheid = [[Yen]] | valutakode = JPY
+| tydzone =  +9
+| volksleed = [[Kimi Ga Yo]]
+| feystdag = 
+| tld = jp | landkode = JPN | tel = 81
 }}
 '''Japan''' ([[Japans]]: ''Nihon'', [[Kanji]]:日本国) is n laand in [[Azië|Oostazie]]. t Bestait hailmoal uut ailanden, woarvan vief grode: [[Hokkaido]], [[Honshu]], [[Shikoku]] en [[Kyushu]]. Honshu is t grootste en ook t belaankriekste ailaand, woar onder andere de baarge [[Fuji]], de heufdstad [[Tokio]] en de veurmoalege heufdsteden [[Kyoto]] en [[Osaka]] op liggen. Op Hokkaido leven de [[Ainu]], de oorspronkelke bewoner van Japan. 
 
