*Empty MediaWiki Message*

--- a/Indonezie.mw
+++ b/Indonezie.mw
@@ -1,20 +1,20 @@
-{{Laandtabel-gos
-| noaminlaandstoal = Republik Indonesia
-| vlage = [[Bestaand:Flag of Indonesia.svg|125px|border|Vlage van Indonezie]]
-| woapen = [[Bestaand:Coat of Arms of Indonesia Garuda Pancasila.svg|100px|Woapen van Indonezie]]
-| lokoatsie = Locatie Indonesië.png
-| breedtegroad = 2/30//S | lengtegroad = 118///E | region = ID
-| toalen = [[Indonesisch]]
-| heufdstad = [[Jakarta]]
-| religie = [[islam]] (ca. 86%), [[christendom|kristendom]] 10%, [[hindoeïsme]] 3%, [[boeddhisme]] 1% e.a.
-| regeernsvörm = [[Rippebliek|Republiek]]
-| km2 = 1.919.440    | pctwoater = 4,85
-| inwoner = 238 miljoen | dichtte = 131
-| munt = [[rupiah]] | valutakode = IDR
-| tiedzone = +7 tot +9
-| volkslaid = [[Indonesia Raya]]
-| feestdag = o.a. 17 augustus
-| tld = id | laandkode = IDN | til = 62
+{{Landtabel
+| nameinlandstaal = Republik Indonesia
+| vlagge = Flag of Indonesia.svg
+| wåpen = Coat of Arms of Indonesia Garuda Pancasila.svg
+| lokaty = LocationIndonesia.svg
+| breyddegråd = 2/30//S | längdegråd = 118///E | region = ID
+| talen = [[indonesisk]]
+| höyvdstad = [[Jakarta]]
+| religy = [[islam]] (ca. 86%), [[christendom]] 10%, [[hindoeïsme|hinduisme]] 3%, [[boeddhisme|buddhisme]] 1% e.a.
+| regeringsform = [[Rippebliek|republik]]
+| km2 = 1.910.931    | pctwater = 4,85
+| inwoaners = 260.580.739 (2017) | dichtheid = 136,4
+| münteynheid = [[rupiah]] | valutakode = IDR
+| tydzone = +7 tot +9
+| volksleed = [[Indonesia Raya]]
+| feystdag = u.a. 17 augustus
+| tld = id | landkode = IDN | tel = 62
 }}
 '''Indonezie''' is n [[republiek]], bestoande uut n groot aailandengebied in [[Zuudoost-Azie]]. t Ligt tuzzen t Zuudoost-Azioatische vastelaand en Austroalie, en tuzzen de [[Indische Oceaan|Indische]] en [[Grote Oceaan|Stille Ozeoan]]. In t noorden grènst t ook aan de [[Zuud-Chinese Zee]]. Indonezie grènst aan [[Maleisië|Malaizie]] op t aailand [[Borneo]], aan [[Papoea-Nieuw-Guinea|Papoea-Nij-Guinea]] op t aailaand [[Nieuw-Guinea|Nij-Guinea]], en aan [[Oost-Timor]] op t aailaand [[Timor]]. In t zuden grenst t aan [[Australië (laand)|Austroalie]]. De heufdstad is [[Jakarta]]. De grootste aailanden binnen [[Java]], [[Sumatra]], [[Borneo]], [[Celebes]] en [[Nij Guinea]].
 
