--- a/Bagraain.mw
+++ b/Bagraain.mw
@@ -1,20 +1,20 @@
-{{Laandtabel-gos
-| noaminlaandstoal = مملكة البحرين <br /><small>Mamlakat al-Baḥrayn</small>
-| naam = Bagraain
-| vlage = [[Bestaand:Flag of Bahrain.svg|120px|border|Vlaag van Bagraain]]
-| woapen = [[Bestaand:Coat of arms of Bahrain.svg|90px|Embleem van Bagraain]]
-| breedtegroad = 35/10//N | lengtegroad = 136///E | region = JP
-| lokoatsie = LocationBahrain.png
-| toalen = [[Arabies]]
-| heufdstad = [[Manama]]
-| religie = [[Islam]]
-| regeernsvörm = [[Konstitutsionele monaarchie]] ([[Keunenkriek]])
-| km2 = 750| pctwoater = 0%
-| inwoner = 1,234,596 (2010) | dichtte = 1,646.1
-| munt = [[Bagraainse Dinar]] | valutakode = BHD
-| tiedzone =  +3
-| volkslaid = [[Bahrainona]]
-| tld = hb | laandkode = BH | til = 973
+{{Landtabel
+| nameinlandstaal = مملكة البحرين <br /><small>Mamlakat al-Baḥrayn</small>
+| name = Bagraain
+| vlagge = Flag of Bahrain.svg
+| wåpen = Coat of arms of Bahrain.svg
+| breyddegråd = 35/10//N | längdegråd = 136///E | region = JP
+| lokaty = LocationBahrain.png
+| talen = [[arabies|arabisk]]
+| höyvdstad = [[Manama]]
+| religy = [[islam]] 82%, [[christendom]] 8%, [[boeddhisme|buddhisme]], [[hindoeïsme|hinduisme]], [[jodendom|joadendum]] en [[bahai]] (totaal oaverige 10%)
+| regeringsform = [[konstitutionele monarchy]]
+| km2 = 767| pctwater = 0%
+| inwoaners = 1.410.942 (2017) | dichtheid = 1.839,6
+| münteynheid = [[bahrainske dinar]] | valutakode = BHD
+| tydzone =  +3
+| volksleed = [[Bahrainona]]
+| tld = hb | landkode = BH | tel = 973
 }}
 
 '''Bagraain''' ([[Arabies]]: ‏البحرين (Baḥrayn), [[Engels]]: ''Bahrain''), offisieel t '''Keunenkriek Bagraain''' is n laand ien t [[Middenoosten]]. t Is n lutje aailaand, sikkom zo groot as t [[Oldambt (streek)|Oldambt]] en [[Westerwoolde|Westerwolde]] soamen en ligt veur de kust van [[Saoedi-Arabië]] en [[Qatar]] ien de [[Perziese golf]]. 
