*Empty MediaWiki Message*

--- a/Denmaark.mw
+++ b/Denmaark.mw
@@ -1,24 +1,24 @@
 {{Zie dv|Zai [[Denmaark (deurverwiespagina)]] veur aandere betaikenissen van '''Denmaark'''}}
-{{Laandtabel-gos |
-| noaminlaandstoal = Kongeriget Danmark
-| vlage = [[Bestaand:Flag of Denmark.svg|150px|Vlage van Denmaark]] 
-| woapen = [[Bestaand:National Coat of arms of Denmark.svg|70px|Woapen van Denmaark]]
-| lokoatsie = Denmark-Pos.png
-| breedtegroad=55/47//N
-| lengtegroad=9/47//E
+{{Landtabel |
+| nameinlandstaal = Kongeriget Danmark
+| vlagge = Flag of Denmark.svg
+| wåpen = National Coat of arms of Denmark.svg
+| lokaty = Denmark-Pos.png
+| breyddegråd=55/47//N
+| längdegråd=9/47//E
 | region=DK
-| toalen = [[Deens]]
-| heufdstad = [[Kopenhoaven]]
-| religie = [[Protestantisme|Protestants]] 95%
-| regeernsvörm = [[Konstitusionele monarchie|Konstitutionele monaarchie]]
-| km2 = 43.094 | pctwoater = 1,6
-| inwoner =  5.411.596 
-| dichtte = 125,6
-| munt = [[Deense krone]] | valutakode = DKK
-| tiedzone = +1
-| volkslaid = [[Der er et yndigt land]]
-| feestdag = [[5 juni]]
-| tld = dk | laandkode = DNK | til = 45
+| talen = [[Deens|däänsk]]
+| höyvdstad = [[Kopenhoaven|Koupenhaven]]
+| religy = [[lutheranisme]] 80,9% (2010), [[islam]] 3,7%
+| regeringsform = [[konstitutionele monarchy]]
+| km2 = 43.094 | pctwater = 1,6
+| inwoaners =  5.605.948 (2017)
+| dichtheid = 130,1
+| münteynheid = [[däänske kroune]] | valutakode = DKK
+| tydzone = +1
+| volksleed = [[Der er et yndigt land]]
+| feystdag = [[5 juni]]
+| tld = dk | landkode = DNK | tel = 45
 }}
 '''Keunenkriek Denmaark''' ([[Deens]]: ''Kongeriget Danmark'') is n laand in t [[Scandinaovië|Skandinoavische]] dail van [[Europa (continent)|Europa]]. t Bestait uut n [[schierailaand]] (Jytlaand) en een aantal aailanden, woarvan [[Funnen]] (Fyn) en [[Seelaand]] (Sjælland) de grootste twij binnen. 
 
