*Empty MediaWiki Message*

--- a/Finlaand.mw
+++ b/Finlaand.mw
@@ -1,22 +1,22 @@
-{{Laandtabel-gos
-| noaminlaandstoal = Suomen Tasavalta<br />Republiken Finland
-| vlage = [[Bestaand:Flag of Finland.svg|border|150x100px|Vlage van Finlaand]]
-| woapen = [[Bestaand:Coat of arms of Finland.svg|100x100px|Woapen van Finlaand]]
-| lokoatsie = LocationFinland.png
-| breedtegroad = 65////N
-| lengtegroad = 26////E
+{{Landtabel
+| nameinlandstaal = Suomen Tasavalta<br />Republiken Finland
+| vlagge = Flag of Finland.svg
+| wåpen = Coat of arms of Finland.svg
+| lokaty = LocationFinland.png
+| breyddegråd = 65////N
+| längdegråd = 26////E
 | region = FI
-| toalen = [[Fins]], [[Zweeds|Sveeds]]
-| heufdstad = [[Helsinki]]
-| religie = [[Protestantisme|Protestaants]] 90%
-| regeernsvörm = [[Rippebliek|Republiek]]
-| km2 = 337.030 | pctwater = 9.4
-| inwoner = 5.246.879 (2005) | dichtte = 17,1
-| munt = [[uro|euro]] | valutakode = EUR
-| tiedzone = +2
-| volkslaid = [[Maamme (Vårt land)]]
-| feestdag = 6 december
-| tld = fi | laandkode = FIN | til = 358
+| talen = [[fins]]k, [[Zweeds|sweedsk]]
+| höyvdstad = [[Helsinki]]
+| religy = [[protestantisme]] 81%, neet gelöyvig 17% (2008)
+| regeringsform = [[Rippebliek|republik]]
+| km2 = 336.855 | pctwater = 9,4
+| inwoaners = 5.518.371 (2017) | dichtheid = 16,4
+| münteynheid = [[uro|euro]] | valutakode = EUR
+| tydzone = +2
+| volksleed = [[Maamme (Vårt land)]]
+| feystdag = 6 december
+| tld = fi | landkode = FIN | tel = 358
 }}
 '''Finlaand''' ([[Fins]]: ''Suomi'') is n laand in [[Scandinaovië|Skandinoavie]], Noord-[[Europa (continent)|Europa]]. t Is n republiek dij sunt 2012 [[Sauli Niinistö]] as presidente het. t Laand grenst in t westen aan de [[Botnische golf]], in t noordwesten aan [[Sveden]], in t noorden aan [[Noorwegen]], in t oosten aan [[Ruslaand]] en in t zuden aan de [[Finse golf]] dij Finlaand en [[Estlaand]] schaaidt. De heufdstad is [[Helsinki]]. 
 
