uutebreided, mag ümmesetted wörden in et achterhooksk

--- a/Loo_(Duve).mw
+++ b/Loo_(Duve).mw
@@ -1,2 +1,7 @@
-'''Loo''' is nen darp in de [[Gelderlaand|gelderske]] gemeynte [[Duve (gemeente)|Düve]] in de [[Liemers|Lymers]]. Et hevt 1120 inwöäners (völgens CBS in 2018).
+'''Loo''' is een darp in de [[Gelderlaand|gelderske]] gemeynde [[Duve (gemeente)|Düven]] in de [[Liemers|Lymers]]. Et hevt 1120 inwuners (volgens CBS in 2018).
+
+De oorsprungelike name van et darp was '''Angeroyen''', enöömd nå de [[waerd]]en dee tot Angeren behöyrden, an de [[Betuwe|betuwske]] kante van de [[Rien|Ryn]]. Nå een ströymverleaging in de middeleywen kwammen disse waerden an de lymerske syde te liggen. So kwam et darp Angeroyen in de Lymers te liggen. Et bestünd üüt een untginningsgebeed tüsken [[Westervoort]] en [[Groessen]], ümgeaven döär een olde rynstrank: de Leigrave. De band mid et darp Angeren blikt üüt de name, een ''ooy'' is een ander woord vöär 'waerd'.
+
 {{Dialekt|act||NSS}}
+
+[[Kategorie:Plaotse in Gelderlaand]]
