*Empty MediaWiki Message*

--- a/Süüdossetie.mw
+++ b/Süüdossetie.mw
@@ -1,26 +1,24 @@
 [[Bestaand:Ossetia-map.png|duum|Ligging Süüdossetie]]
 [[Bestaand:Ossetia05.png|rechts|duum|250x250px|Kaarte Süüdossetie]]
-'''Süüdossetie''' ([[ossetisk]]: Хуссар Ирыстон, ''Chussar Iryston''; [[georgisk]]: სამხრეთ ოსეთი, ''Samchret Osseti''; [[Russisch|russisk]]: Южная Осетия, ''Juzjnaja Osetija''; officiele name: ''Republik Süüdossetie'') is een gebeed in de Kaukasus, dee sik up [[21 december]] [[1991]] unafhangelik verklårde van [[Georgië|Georgie]]. Georgie en andere landen betwisten de unafhangelikheid van Süüdossetie. Süüdossetie is officieel een semipresidentiele republik, mid et karakter van een [[satellitståt]]. De vroggere süüdossetiske KGB-leider, Leonid Tibilov, trad up 19 april 2012 an as president.
+'''Süüdossetie''' ([[ossetisk]]: Хуссар Ирыстон, ''Chussar Iryston''; [[georgisk]]: სამხრეთ ოსეთი, ''Samchret Osseti''; [[Russisch|russisk]]: Южная Осетия, ''Juzjnaja Osetija''; officiele name: ''Republik Süüdossetie'') is een gebeed in de [[Kaukasus]], dee sik up [[21 december]] [[1991]] unafhangelik verklårde van [[Georgië|Georgie]]. Georgie en andere landen betwisten de unafhangelikheid. Et land is officieel een semipresidentiele republik, mid et karakter van een [[satellitståt]]. De vroggere süüdossetiske [[KGB]]-leider, [[Leonid Tibilov]], trad up 19 april 2012 an as president.
 
-De unafhangelikheid van Süüdossetie wördde erkend döär [[Ruslaand|Rusland]] up [[26 augustus]] [[2008]], döär Nicaragua up [[2 september]] 2008 en döär Venezuela up [[10 september]] [[2009]].
+De unafhangelikheid van Süüdossetie wördde erkend döär [[Ruslaand|Rusland]] up [[26 augustus]] [[2008]], döär Nicaragua up [[2 september]] 2008 en döär [[Venezuela]] up [[10 september]] [[2009]].
 
-Süüdossetie ligt an de süüdkante van de Kaukasus, dee grenst an de russiske republik Noordossetie, en strekt sik richting et süden üüt tot de rivyr Mtkvari in Georgie. Een grout deyl van et bargachtige gebeed ligt 1.000 meter boaven seynivo.
+Süüdossetie ligt an de süüdkante van de Kaukasus, dee grenst an de russiske republik [[Noordossetie]], en strekt sik richting et süden üüt tot an de rivyr [[Mtkvari]] in Georgie. Een grout deyl van et bargachtige gebeed ligt 1.000 meter boaven seynivo.
 
-Süüdossetie hevt een uppervlakde van 3.900 km² en hevt üm de by 70.000 inwuners, dee een mengeling binnen van georgiers en osseten. De groutste stad in et gebeed is Tskhinvali, dat as de höyvdstad van et gebeed deent.
+Süüdossetie hevt een uppervlakde van 3.900 km² en hevt üm de by 70.000 inwuners, dee een mengeling binnen van georgiers en osseten. De groutste stad in et gebeed is [[Tskhinvali]], dat as de höyvdstad van et gebeed deent.
 
-De regio was een autonoom oblast in Georgie under de [[Sovjet-Unie|Sovjet-Uny]].
+De regio was een autonoom [[oblast]] in Georgie under de [[Sovjet-Unie|Sovjet-Uny]].
 
-== Oorloagen in Süüdossetie ==
+== Oorlog in Süüdossetie ==
 In de nacht van [[8 augustus]] 2008 (lokale tyd) völlen [[Georgië|georgiske]] truppen Tskhinvali an, nådat de georgiske regering bewäärde dat de süüdossetiske separatisten darpen in de buurt van Tshkinvali ebombardeerd sollen hebben, in teagenstelling tot president [[Micheil Saakasjvilis]] anbud tot wåpenstilstand.
 
 Georgie reageerde upny döär et leager in te setten, en hevt vervolgens hülpe esöcht by de [[Verienigde Staoten van Amerika|Vereynigde Ståten van Amerika]].
 
-== Referensys ==
-{{reflist}}
-
 == Üütgånde verwysingen ==
 {{Commonscat|South Ossetia}}
 
+{{Dialekt|wvel||Nysasisske Skryvwyse}}
 
 [[Kategorie:Land]]
 [[Kategorie:Europa]]
