*Empty MediaWiki Message*

--- a/Süüdossetie.mw
+++ b/Süüdossetie.mw
@@ -20,6 +20,6 @@ Georgie reageerde upny döär et leager in te setten, en hevt vervolgens hülpe 
 
 {{Dialekt|wvel||Nysasisske Skryvwyse}}
 
-[[Kategorie:Land]]
+[[Kategorie:Laand]]
 [[Kategorie:Europa]]
 [[Kategorie:Azië]]
