*Empty MediaWiki Message*

--- a/Süüdossetie.mw
+++ b/Süüdossetie.mw
@@ -18,7 +18,7 @@ Georgie reageerde upny döär et leager in te setten, en hevt vervolgens hülpe 
 == Üütgånde verwysingen ==
 {{Commonscat|South Ossetia}}
 
-{{Dialekt|wvel||Nysasisske Skryvwyse}}
+{{Dialekt|wvel||Nysassiske Skryvwyse}}
 
 [[Kategorie:Laand]]
 [[Kategorie:Europa]]
