*Empty MediaWiki Message*

--- a/Süüdossetie.mw
+++ b/Süüdossetie.mw
@@ -2,7 +2,7 @@
 [[Bestaand:Ossetia05.png|rechts|duum|250x250px|Kaarte Süüdossetie]]
 '''Süüdossetie''' ([[ossetisk]]: Хуссар Ирыстон, ''Chussar Iryston''; [[georgisk]]: სამხრეთ ოსეთი, ''Samchret Osseti''; [[Russisch|russisk]]: Южная Осетия, ''Juzjnaja Osetija''; officiele name: ''Republik Süüdossetie'') is een gebeed in de [[Kaukasus]], dee sik up [[21 december]] [[1991]] unafhangelik verklårde van [[Georgië|Georgie]]. Georgie en andere landen betwisten de unafhangelikheid. Et land is officieel een semipresidentiele republik, mid et karakter van een [[satellitståt]]. De vroggere süüdossetiske [[KGB]]-leider, [[Leonid Tibilov]], trad up 19 april 2012 an as president.
 
-De unafhangelikheid van Süüdossetie wördde erkend döär [[Ruslaand|Rusland]] up [[26 augustus]] [[2008]], döär [[Nicaragua]] up [[2 september]] 2008, döär [[Venezuela]] up [[10 september]] [[2009]] en döär [[Nauru]] up [[15 december]] [[2009]].
+De unafhangelikheid van Süüdossetie wördde erkend döär [[Ruslaand|Rusland]] up [[26 augustus]] [[2008]], döär [[Nicaragua]] up [[2 september]] 2008, döär [[Venezuela]] up [[10 september]] [[2009]], döär [[Nauru]] up [[15 december]] [[2009]] en döär [[Syrie]] up [[29 mei]] [[2018]].
 
 Süüdossetie ligt an de süüdkante van de Kaukasus, dee grenst an de russiske republik [[Noordossetie]], en strekt sik richting et süden üüt tot an de rivyr [[Mtkvari]] in Georgie. Een grout deyl van et bargachtige gebeed ligt 1.000 meter boaven seynivo.
 
