*Empty MediaWiki Message*

--- a/Nagorno-Karabach.mw
+++ b/Nagorno-Karabach.mw
@@ -1,6 +1,6 @@
 {{Zie dv|See ouk de [[Republik Artsach]]}}
 
-'''Nagorno-Karabakh''' (letterlik: ''de bargachtige swarte tüne'', in et [[armeensk]]: Լեռնային Ղարաբաղ (''Lernajin Gharabagh'') of Արցախ (''Artsach''); in et [[azerbaidjaansk]]: ''Da&#x11F;l&#x131;q Qaraba&#x11F;'' of ''Yuxar&#x131; Qaraba&#x11F;är''; in et [[Russisch|russisk]]: Нагорный Карабах (''Nagornyj Karabach'')) is een binnenståt in de süüdoustelike [[Kaukasus]] tüsken Karabach en [[Sjunik]]. Der wunen rund de 145.000 inwuners in de et gebeed. De meyrerheid van de bevolking binnen vandage de dag etniske armeniers (99%), mid kleinere gruppen azerbaidjanen, russen en kurden.
+'''Nagorno-Karabach''' (letterlik: ''de bargachtige swarte tüne'', in et [[armeensk]]: Լեռնային Ղարաբաղ (''Lernajin Gharabagh'') of Արցախ (''Artsach''); in et [[azerbaidjaansk]]: ''Da&#x11F;l&#x131;q Qaraba&#x11F;'' of ''Yuxar&#x131; Qaraba&#x11F;är''; in et [[Russisch|russisk]]: Нагорный Карабах (''Nagornyj Karabach'')) is een binnenståt in de süüdoustelike [[Kaukasus]] tüsken Karabach en [[Sjunik]]. Der wunen rund de 145.000 inwuners in de et gebeed. De meyrerheid van de bevolking binnen vandage de dag etniske armeniers (99%), mid kleinere gruppen azerbaidjanen, russen en kurden.
 
 De ståtus van et gebeed is ümstreaden en wördt döär de [[VN]] as een deyl van Azerbaidjan eseen. Et groutste gedeylde van et gebeed is in handen van de [[Republik Artsach]] en Azerbaidjan bestüürt et gebeed al neet meyr sinds 1988.
 [[Bestaand:Artsakh_Occupation_Map.jpg|duum|Sketse van et armeensk-beheyrde gebeed]]
