*Empty MediaWiki Message*

--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -574,7 +574,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Litouwen|Litauen]]
 |Republik Litauen
 |[[Vilnius]]
-|[[Litouws|Litauwsk]]: Lietuva
+|[[Litouws|Litausk]]: Lietuva
 |-
 |[[Luxemburg (laand)|Luxembörg]]
 |Grouthartogdom Luxembörg
@@ -979,7 +979,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Zwitserlaand|Switserland]]
 |Switserske Bundsståt
 |Officieel geyn, de bundsstad is [[Bern (stad)|Bern]]
-|[[Duuts|Düütsk]]: Schweiz <br /> [[Frans]]k: Suisse <br /> [[Italiaans]]k: Svizzera <br /> [[Reto-Romaans]]k: Svizra
+|[[Duuts|Düütsk]]: Schweiz <br /> [[Frans]]k: Suisse <br /> [[Italiaans]]k: Svizzera <br /> [[Retoromaansk]]: Svizra
 |-
 |[[Syrië|Syrie]]
 |Arabiske Republik Syrie
