*Empty MediaWiki Message*

--- a/Süüdossetie.mw
+++ b/Süüdossetie.mw
@@ -8,7 +8,7 @@ Süüdossetie ligt an de süüdkante van de Kaukasus, dee grenst an de russiske 
 
 Süüdossetie hevt een uppervlakde van 3.900 km² en hevt üm de by 70.000 inwuners, dee een mengeling binnen van georgiers en osseten. De groutste stad in et gebeed is [[Tskhinvali]], dat as de höyvdstad van et gebeed deent.
 
-De regio was een autonoom [[oblast]] in Georgie under de [[Sovjet-Unie|Sovjet-Uny]].
+De regio was een autonoom [[oblast]] in Georgie under de [[Sovjet-Unie|Sovjetuny]].
 
 == Oorlog in Süüdossetie ==
 In de nacht van [[8 augustus]] 2008 (lokale tyd) völlen [[Georgië|georgiske]] truppen Tskhinvali an, nådat de georgiske regering bewäärde dat de süüdossetiske separatisten darpen in de buurt van Tshkinvali ebombardeerd sollen hebben, in teagenstelling tot president [[Micheil Saakasjvilis]] anbud tot wåpenstilstand.
