*Empty MediaWiki Message*

--- a/Nagorno-Karabach.mw
+++ b/Nagorno-Karabach.mw
@@ -6,7 +6,7 @@ De ståtus van et gebeed is ümstreaden en wördt döär de [[VN]] as een deyl v
 [[Bestaand:Artsakh_Occupation_Map.jpg|duum|Sketse van et armeensk-beheyrde gebeed]]
 Nagorno-Karabach maakt sinds de oldheid deyl üüt van andere machtige ståten, so as Armenie, [[Albanië|Albanie]] en [[Persie]], vöärdat et gebeed oavergüng in russiske handen volgens et [[Verdrag van Gulistan]], dat et ende markeerde van de eyrste russisk-persiske oorlog in [[1813]]. In 1822 wördde et gebeed deyl van de russiske, en later de Sovjet-provinsy Azerbaidjan.
 
-By de untbinding van de [[Sovjet-Unie|Sovjet-Uny]] in 1991, was et gebeed een autonoom deyl van Azerbaidjan. In et gebeed wuunde lykewels vöäral armenen (76%). Mid morele en materiele stöän van Armenie begun een beweaging üm et gebeed oaver te dragen an Armenie. Dit resulteerde in een [[volksrådpleaging]] up [[10 december]] [[1991]]. Een oaverweldigende meyrerheid stemde vöär unafhangelikheid van Azerbaidjan, mär de volksrådpleaging wördde eboikotted döär de azerbaijaanske minderheid (23%) van bevolking. De toneamende spanningen in et gebeed leidde tot gewelddådige aktys teagen armeniers in Azerbaidjan en azerbaidjanen in Amenie, wat resulteerde in de oaverdracht van groute anntallen azerbaidjanen in armeenske gebeden en armeniers in azerbaidjaanske gebeden (behalve in Nagorno-Karabach). Nå skatting binnen der rund de 800.000 meansken up de vlücht in of van et gebeed.
+By de untbinding van de [[Sovjet-Unie|Sovjetuny]] in 1991, was et gebeed een autonoom deyl van Azerbaidjan. In et gebeed wuunde lykewels vöäral armenen (76%). Mid morele en materiele stöän van Armenie begun een beweaging üm et gebeed oaver te dragen an Armenie. Dit resulteerde in een [[volksrådpleaging]] up [[10 december]] [[1991]]. Een oaverweldigende meyrerheid stemde vöär unafhangelikheid van Azerbaidjan, mär de volksrådpleaging wördde eboikotted döär de azerbaijaanske minderheid (23%) van bevolking. De toneamende spanningen in et gebeed leidde tot gewelddådige aktys teagen armeniers in Azerbaidjan en azerbaidjanen in Amenie, wat resulteerde in de oaverdracht van groute anntallen azerbaidjanen in armeenske gebeden en armeniers in azerbaidjaanske gebeden (behalve in Nagorno-Karabach). Nå skatting binnen der rund de 800.000 meansken up de vlücht in of van et gebeed.
 
 Eyn van de meyst blodige geböärtenissen in dit konflikt had plaatse in februåri 1992, to armeenske soldaten in de stad [[Chodjali]] 613 azerbaidjaanske börgers afslachtden, van wee 108 vrouwlüde waren en 63 kinders. De geböärtenisse steyt bekend as et bloodbad van Chodjali.
 
