*Empty MediaWiki Message*

--- a/Azerbaidjan.mw
+++ b/Azerbaidjan.mw
@@ -20,7 +20,7 @@
 
 Azerbaidjan had in [[2013]] 9.590.159 inwonners. De höyvdstad is [[Baku]]. Azerbaidjan is et ennigste [[Turkse sproaken|türksspråkige]] land wat vöär et grötste deyl in Europa ligt.
 
-De [[Demokratiske Republik Azerbaidjan]] was et eyrste land in de [[oemma|islamitiske wearld]] dee karke en ståt uut mekaar höld.<ref>Kazemzadeh, Firuz. The Struggle for Transcaucasia: [[1917]]-[[1921]]. The New York Philosophical Library, 1951. blzs. 124, 222, 229, 269–270</ref> Et wör uperichted in [[1918]] mär in [[1920]] inenömmen döär de [[Sovjet-Uny]].<ref>Tadeusz Swietochowski. Russia and Azerbaijan: A Borderland in Transition. [[Columbia University Press]], 1995. ISBN 978-0-231-07068-3, 978978-0-231-07068-3, blz.69.</ref><ref>Reinhard Schulze. A Modern History of the Islamic World. I.B.Tauris, 2000. ISBN 978-1-86064-822-9, 9781860648229.</ref> Nå den val van et [[kommunisme]] in [[1991]] was Azerbaidjan unafhangelik. Rap dårup köm der [[oorlog in Nagorno-Karabach]]. Azerbaidjan verlöär [[Nagorno-Karabach]] (med höyvdsakelik [[Armenië|armeniers]]), de ümliggende strekke, en de strekken [[Karki (Azerbaidjan)|Karki]], [[Yukhary Askipara]], [[Barxudarlı]] en [[Sofulu]]. [[Republik Artsach|Nagorno-Karabach]] is officieel noch altyd nen neet-erkenden ståt en wördt internationaal noch altyd eseen as een feitelik deyl van Azerbaidjan.<ref>[http://www.un.org/russian/documen/scresol/res1993/res822.htm Un.org. Резолюция СБ ООН № 822 от 30 апреля 1993 года.] Bekekken: 4 januåri 2011.</ref>
+De [[Demokratiske Republik Azerbaidjan]] was et eyrste land in de [[oemma|islamitiske wearld]] dee karke en ståt uut mekaar höld.<ref>Kazemzadeh, Firuz. The Struggle for Transcaucasia: [[1917]]-[[1921]]. The New York Philosophical Library, 1951. blzs. 124, 222, 229, 269–270</ref> Et wör uperichted in [[1918]] mär in [[1920]] inenömmen döär de [[Sovjetuny]].<ref>Tadeusz Swietochowski. Russia and Azerbaijan: A Borderland in Transition. [[Columbia University Press]], 1995. ISBN 978-0-231-07068-3, 978978-0-231-07068-3, blz.69.</ref><ref>Reinhard Schulze. A Modern History of the Islamic World. I.B.Tauris, 2000. ISBN 978-1-86064-822-9, 9781860648229.</ref> Nå den val van et [[kommunisme]] in [[1991]] was Azerbaidjan unafhangelik. Rap dårup köm der [[oorlog in Nagorno-Karabach]]. Azerbaidjan verlöär [[Nagorno-Karabach]] (med höyvdsakelik [[Armenië|armeniers]]), de ümliggende strekke, en de strekken [[Karki (Azerbaidjan)|Karki]], [[Yukhary Askipara]], [[Barxudarlı]] en [[Sofulu]]. [[Republik Artsach|Nagorno-Karabach]] is officieel noch altyd nen neet-erkenden ståt en wördt internationaal noch altyd eseen as een feitelik deyl van Azerbaidjan.<ref>[http://www.un.org/russian/documen/scresol/res1993/res822.htm Un.org. Резолюция СБ ООН № 822 от 30 апреля 1993 года.] Bekekken: 4 januåri 2011.</ref>
 
 Van [[12 juni|12]] töt en med [[28 juni]] [[2015]] wördden de eyrste [[Europeeske Spöllen]] eholden in Azerbaidjan.
 
