*Empty MediaWiki Message*

--- a/Sovjetuny.mw
+++ b/Sovjetuny.mw
@@ -1,26 +1,66 @@
-{{Laandtabel-stl
-| naemeinlaanstael = Союз Советских Социалистических Республик<br /><small>Unie van Socialistiese Sovjetrepubleeken</small>
-| naam = Sovjet-Unie
-| vlagge = [[Bestaand:Flag of the Soviet Union.svg|140x100px|border|Vlagge van Sovjet-Unie]]
-| waopen = [[Bestaand:State Emblem of the Soviet Union.svg|100x100px|Waopen van Sovjet-Unie]]
-| breedtegroad = 
-| lekaosie = Union of Soviet Socialist Republics (orthographic projection).svg
-| taelen = [[Russisch]] (en aandere)
-| heufdstad = [[Moskou (stad)|Moskou]]
-| religie = Niet-geleuvig
-| regeringsvorm = [[socialistiesen stoat]]
-| km2 = 22.402.200 (1991) | pctwaeter = 
-| inwoners = 293,0 miljoen (1991) | dichthied = 13,1
-| muntienhied = [[Sovjet Roebel]] | valutakode = SUR
-| tiedzone =  +2 tot + 12
-| volkslied = [[Gimn Sowjetskowo Sojusa]]
-| feestdag = [[9 meie]]
-| tld = su | laandkode = SUHH | til = 7
+{{Landtabel
+| nameinlandstaal = Союз Советских Социалистических Республик<br /><small>Uny van Socialistiske Sovjetrepubliken</small>
+| name = Sovjet-Unie
+| vlagge = Flag of the Soviet Union.svg
+| wåpen = State Emblem of the Soviet Union.svg
+| längdegråd = 70/7//E
+| breyddegråd = 58/39//N
+| lokaty = Union of Soviet Socialist Republics (orthographic projection).svg
+| talen = [[Russisch|russisk]] (en andere)
+| höyvdstad = [[Moskou (stad)|Moskou]]
+| religy = neet-gelöyvig
+| regeringsform = socialistiske ståt
+| km2 = 22.402.200 (1991) | pctwater = 
+| inwoaners = 293,0 miljoon (1991) | dichtheid = 13,1
+| münteynheid = [[rubel]] | valutakode = SUR
+| tydzone =  +2 tot + 12
+| volksleed = [[Gimn Sovetskogo Sojuza]]
+| feystdag = [[9 meie]]
+| tld = su | landkode = SUHH | tel = 7
 }}
 
-De '''Unie van Socialistiese [[Sovjet]]republeeken''' (USSR, [[Cyrillies]]: СССР) (ok wal ''Sovjet-Unie'', vertaald ''Roaden-Unie'') was nen [[sociaolisme|socialistiesen]] stoat in [[Europa (continent)|Europa]] en [[Azië]] en was in den [[Kolde Oorlog|Kolden Oorlog]] ene van de twee [[supermacht]]en. De Sovjet-Unie had in heure hoogti-jdagen nen unmundegen invlood oaver de ganse weald, mit nen groten ideologiesen invlood deur et [[kommunisme]] en et grootste laandleager en [[nukleair]]e arsenoal ter weald. De Sovjet-Unie wodden op-ericht in [[1922]] noa de [[Russiese Revolutie|Russiese Revolusie]] en et instorten van et [[Keizerriek Ruslaand|Russiese Keizerriek]]. Noa under andere ekonomiese neergäng en onröst under de verskillende bevolkingsgröppen wöd zi-j in [[1991]] ontboanden en wodden alle 15 republeeken woaruut zi-j bestoand unofhänkeleke stoaten.
+De '''Sovjetuny''' (vulüüt: de ''Uny van Socialistiske [[Sovjet]]republiken'' (USSR, [[kyrillisk]]: СССР), letterlik: ''rådenuny'' of ''rådenverbund'') was een [[sociaolisme|socialistiske]] ståt in [[Eurasie]] en was in de [[Kolde Oorlog|Kolde Oorlog]] eyn van de twey [[supermacht]]en. De Sovjetuny had in syn hougtydagen een unmündige invlööd oaver de heyle wearld, mid een groute ideologiske invlööd döär et [[kommunisme]] en et groutste landleager en [[nukleäär|nukleäre]] arsenaal ter wearld. 
 
-{{Begin|act}}
+De Sovjetuny is uperichted in [[1922]] nå de [[Russiske Revoluty]] en et instorten van et [[Russiske Keiserryk]]. Nå under andere de ekonomiske neadergang en unrüst under de verskillende bevolkingsgruppen wördt de Sovjetuny in [[1991]] untbunden en wörden alle 15 republiken wårüüt de uny bestünd unafhangelike ståten.
 
-[[Kategorie:Achterhooks artikel]]
+== Regeringsleiders ==
+* [[Vladimir Lenin]] [[1917]]-[[1922]]
+* [[Josef Stalin]] [[1922]]-[[1953]]
+* [[Georgi Malenkov]] [[1953]]
+* [[Nikita Chrusjtsjov]] [[1953]]-[[1964]]
+* [[Leonid Brezjnev]] [[1964]]-[[1982]]
+* [[Juri Andropov]] [[1982]]-[[1984]]
+* [[Konstantin Tsjernenko]] [[1984]]-[[1985]]
+* [[Michail Gorbatsjov]] [[1985]]-[[1991]]
+
+== Ideology ==
+De idelogiske beginsels dee de basis formde van binnenlandske en bütenlandske politik van de Sovjetuny en van et sociaal-ekonomiske systeem van et ryk, wördde et [[marxisme]], een belangryke strouming van et [[kommunisme]]. Volgens disse ideology was et streaven via een perfekt socialistisk systeem een kommunistiske heilståt te wörden. Dårnåst sol de Sovjetuny bydragen an de wearldrevoluty wår et marxisme van üütgeyt. Lenin sörgde in de Sovjetuny vöär een politik-ekonomisk systeem wat up dee marxistiske ideology anslüten most, et [[leninisme]].
+
+== Militäär ==
+Üüt et [[bolsjewisme|bolsjewistiske]] volksleager van de [[Russiske Revoluty]] groide later et [[Roude Leager]]. Et Roude Leager (nå een naamsverandering in 1946: et Sovjetleager) ümvattede de landmacht, luchtmacht, luchtverdeadiging (vanaf 1948) en de Strategiske Rakettruppen (vanaf 1960). Et Roude Leager formde mid de Sovjetmarine de definity van de Sovjetuny.
+
+De [[KGB]] sörgde dårnåst vöär de ståtsveiligheid.
+
+== Belangryke dagen ==
+{| class="wikitable"
+|-
+! Dåtum !! Sassiske name  !! Russiske name !! Anvülling
+|-
+| [[1 jannewaori|1 januåri]] || [[Nijjoar|Nyjår]] || Новый Год || &nbsp;
+|-
+| [[7 jannewaori|7 januåri]] || [[Russisk-ortodokse karke|Ortodokske]] [[karst]] || Православное Рождество || &nbsp;
+|-
+| [[23 febrewaori|23 februåri]] || Dag van et leager || День Советской Армии и Военно-Морского Флота || [[Februårirevoluty]] [[1917]];<br />uprichting van et [[Roude leager]] [[1918]].
+|-
+| [[8 meert|8 määrt]] || [[Internationale vrouwlüdedag]] || Международный Женский День || &nbsp;
+|-
+| [[1 mei]] || [[1 mei]] || Первое Мая - День Солидарности Трудящихся || Dag van de arbeid
+|- 
+| [[9 mei]] || Oaverwinningsdagen || День Победы || Oaverwinning up [[Nazi-Düütskland]] in [[1945]] 
+|- 
+| [[7 november|7]]-[[8 november]] || Socialistiske Oktoberrevoluty || Седьмое Ноября || [[Oktoberrevoluty]] [[1917]]; hit nun: День Примирения
+|}
+
+{{Dialekt|wvel||Nysassiske Skryvwyse}}
+
 [[Kategorie:Vroggeren staot]]
