--- a/Grunnegs.mw
+++ b/Grunnegs.mw
@@ -22,7 +22,7 @@
 |[[Provinzie Grunnen]], Noord-[[Drenthe]], [[Veenkoloniën|Veenkolonien]] (Oost-Drenthe), [[Kölmerlaand]] ([[Frieslaand|Fraislaand]])
 |-
 |Aantel sprekers 
-|310.000  
+|262,000 (Herweijer en Jans 2009)
 |-
 |Dialekten 
 |
