--- a/Banthum.mw
+++ b/Banthum.mw
@@ -32,7 +32,7 @@ In Banthum stoat drie karken: 'n gereformeerd vri-jemaakten, een hervörmden en 
 ===Veurgeskiedenisse===
 Gelieke as  aandere steden en dorpen is ok 't oale Banthum ontstoan an 'n reviere, an d' Overiesselse [[Vechte]].  Disse reviere kump Nederlaand bi-j [[Grambarge]] binnen, streump doar op [[Hardenbarg|'n Arnbarg]] an, langes Banthum deur [[Ommen]] en langes [[Dalsn]] noar Zwolle umme doar bi-j 't Zwarte Water uut te kommen.
 
-Ewen eleden kwamen an de oevers van disse reviere grote zaandvlakten lös te liggen en wonneer as doar sommers de wind overhen bleus ontstunden der zaandverstoevingen die an de weerse kaanten van de reviere dunen vörmden, de zo-enuumde revierdunen.  't Hudige ”Beerzebulten’’ bint hiervan 'n veurbeeld.  Een hele zet veur 't begun van de joartelling wördden de Vechte al bewoond deur rondsjouwende stammen. Pas in de Middelewen stiet der op papiere over blievende bewoners van disse plaatse.
+Ewen eleden kwamen an de oevers van disse reviere grote zaandvlakten lös te liggen en wonneer as doar zommers de wind overhen bleus ontstunden der zaandverstoevingen die an de weerse kaanten van de reviere dunen vörmden, de zo-enuumde revierdunen.  't Hudige ”Beerzebulten’’ bint hiervan 'n veurbeeld.  Een hele zet veur 't begun van de joartelling wördden de Vechte al bewoond deur rondsjouwende stammen. Pas in de Middelewen stiet der op papiere over blievende bewoners van disse plaatse.
 
 ==Vanof de Middelewen==
 De eerste moal dat der feitelik over Banthum eskreven wördden, was op 1385. In 't boek van 't ''registers en rekeningen van 'T Bisdom Utrecht'' woar op bladziede 586 stiet:
