--- a/Paul_Gauguin.mw
+++ b/Paul_Gauguin.mw
@@ -1,7 +1,7 @@
 '''Eugène Henri Paul Gauguin''' (Parys, 7 juni 1848 – Atuona up de Marquesaseelanden, 9 mei 1903) was een fransken künstskilder. Syn skilderstyl wörd under et köppyn [[Postimpressionisme|Postimpressionisme]] eset en et wark nå 1891 by [[Symbolisme]]. Hy wörd eaven-eyns, nåst Van Gogh en [[Paul Cézanne]], as de vader van de [[moderne kunst|moderne künst]] eseen.
 
 ==Leaven==
-So as et verhaal wil, had Gauguin een beste bane as böärsmakelaar, had een vrouwe en kinder en leaven een good leaven in [[Kopenhagen]]. Mar hy gaven et allemåle up ümme up [[Fraankriek|Vrankryk]], [[Paries|Parys]], an te gån en dår vöär de skilderkünst te gån leaven.  
+So as et verhaal wil, had Gauguin een beste bane as böärsmakelaar, had een vrouwe en kinder en leaven een good leaven in [[Kopenhagen]]. Mar hy gaven et allemåle up ümme up [[Fraankriek|Frankryk]], [[Paries|Parys]], an te gån en dår vöär de skilderkünst te gån leaven.  
 
 Tydens syn leaven was hy al een bekenden by de junge skilders in Vrankryk. In verskeidene gruppen was hy een soort guru vöär hün. In [[Pont-Aven]], [[Bretagne]], had hy een skildersgrup. Eyne van syn fans was [[Vincent van Gogh]], wår as hy (med andringen van [[Theo van Gogh]]) en settyn med samen eleaved hevt. Dit hevt uutendelik töt een dikke rüsy ekummen, wårnå Van Gogh in een unwyse büie syn eigen oare der ofsneaden. 
 
