*Empty MediaWiki Message*

--- a/Transnistrie.mw
+++ b/Transnistrie.mw
@@ -1,3 +1,27 @@
+{{Landtabel
+| nameinlandstaal = Република Молдовеняскэ Нистрянэ<br /><small>(''Republica Moldovenească Nistreană'')
+| vlagge = Transnistria State Flag.svg
+| wåpen = Transnistria-coa.svg
+| lokaty = TransnistrieLocatie.png
+| talen = [[rumäänsk]] (in t kyrilliske alfabet),<ref name="referentie1">In de republik Moldavie üm politike readenen ouk wel '[[moldavisk]]'</ref> [[Russisch|russisk]], [[ukrainsk]]
+| höyvdstad = [[Tiraspol]]
+| religy = oaverweagend [[russisk-ortodoks]]
+| regeringsform = [[republik]]
+| längdegråd = 29/36//E   
+| breyddegråd = 46/49//N
+| km2 = 4163
+| pctwater = 
+| inwoaners = 555.347 (2004)
+| dichtheid = 133
+| münteynheid = [[transnistriske rubel]]
+| valutakode = PRB
+| tydzone = +2
+| volksleed = Slăvită să fii, Nistrene
+| feystdag = 2 september
+| tld = –
+| landkode = –
+| tel = 373
+}}
 [[Bestaand:Transnistria.jpg|duum|Transnistrisk [[paspoort]]]]
 '''Transnistrie''' is een regio dee volgens de [[VN]] tot [[Moldavië (laand)|Moldavie]] behöyrt, et funktioneert lykewels as een selvstandige ståt. Transnistrie besteyt üüt een lange streapel land an de oustkante van de rivyr de Dnestr.  
 
@@ -61,6 +85,9 @@ Transnistrie is underverdeyld in vyf distrikten (''raions'') en twey städen.
 |Bender (Bendery)
 |}
 
+== Referensys ==
+<references/>
+
 == Üütgånde verwysingen ==
 
 * [http://transnistria.blogspot.com/2007/05/transnistria-trafficking-arms-on.html Transnistria Trafficking Arms On Europes Doorstep]
@@ -70,5 +97,8 @@ Transnistrie is underverdeyld in vyf distrikten (''raions'') en twey städen.
 * [https://web.archive.org/web/20070311191952/http://www.aiarad.ro/forum/download.php?id=50 Viorel Dolha – ''All about Transnistria'']
 * [http://transnistria.blogspot.com transnistria.blogspot.com – The truth about Transnistria]
 * [https://web.archive.org/web/20070713220821/http://www.fischka.com/e_index.html – Fischka Photo Reportage on Transnistria]
+
+{{Dialekt|wvel||Nysassiske Skryvwyse}}
+
 [[Kategorie:Laand]]
 [[Kategorie:Europa]]
