--- a/Transnistrie.mw
+++ b/Transnistrie.mw
@@ -42,7 +42,7 @@ De höyvdstad is Tiraspol.
 
 === Administrative indeyling ===
 [[Bestaand:Pridnestrian_Administration.png|duum|Distrikten van Transnistrie]]
-Transnistrie is underverdeyld in vyf distrikten (''raions'') en twey städen.
+Transnistrie is underverdeyld in vyv distrikten (''raions'') en twey städen.
 {| class="wikitable"
 !Distrikt (''raion'')
 !Russiske name
