*Empty MediaWiki Message*

--- a/Transnistrie.mw
+++ b/Transnistrie.mw
@@ -34,7 +34,7 @@ As underdeyl van de Sovjetuny makede et gebeed vanaf 1924 deyl üüt van een aut
 == Nå de Sovjetuny ==
 Up [[2 september]] [[1990]] verklårde Transnistrie sik unafhangelik van Moldavie. De dårup volgende Transnistrie-oorlog, wårby sovjet-russiske truppen van et 14. sovjetleager up et ende betrökken rakede an de transnistriske kante, endigde mid een wåpenstilstand dee underteyekend wördde döär de russiske president [[Boris Jeltsin]] en de moldaviske president [[Mircea Snegur]] in [[Moskou|Moskau]] up [[21 juli]] [[1992]]. De oavereynkumst ümmevattede een invoring van vreadestruppen üüt Rusland (5 bataljons), Moldavie (3 bataljons) en Transnistria (2 bataljons), en der wördde ouk een veiligheidszone inesteld tüsken Moldavie en Transnistrie.
 
-Volgens een volksrådpleaging üüt 2006 dee üütevoord wördde döär de regering van Pridnestrovie stemde 97,2 % van de bevolking dervöär üm sik an te slüten by [[Ruslaand|Rusland]]. Up 18 määrt 2014 deende Transnistrie een ansöök in by de Duma üm deyl van Rusland te wörden.
+Volgens een volksrådpleaging üüt 2006 dee üütevoord wördde döär de regering van Pridnestrovie stemde 97,2 % van de bevolking dervöär üm sik an te slüten by [[Ruslaand|Rusland]]. Up 18 määrt 2014 deende Transnistrie een ansöök in by de [[Duma]] üm deyl van Rusland te wörden, mär dat wördde later weader inetrökken.
 
 Transnistrie is vandage de dag een [[Rippebliek|republik]] dee döär geen enkel ander land erkend wördt, behalve döär de internationaal neet-erkende ståten [[Abchazie]] en [[Süüdossetie]]. Et land hevt syn eigen regering, parlement, leager, polity en postsysteem. Dårnåst hevt Transnistrie ouk syn eigen grundwet, volksleed, vlagge en wåpenskild. Een grout deyl van de industry in Moldavie was enkel evästigd in Transnistrie, et verlees van disse regio hevt Moldavie dan ouk financieel swår etröffen.
 
