--- a/Janny_Alberts-Hofman.mw
+++ b/Janny_Alberts-Hofman.mw
@@ -9,16 +9,16 @@ Ze hef actief ewest in de [[Nedersaksisch]]e taalorgenisatie [[Streektaal-Organi
 In Drenthe bint veulen mit heur in de kunde komen deur heur veurlezeri’je op literaire aovenden. Stichting Drentse Taol, de veurloper van ’t [[Huus van de Taol]], hef in 2007 een videopetret van heur emeuken.
 
 ==Wark==
-* Het spinnewiel (gedichten, Assen, 1978)
-* De draod löp deur (gedichten, Assen, 1980)
-* Um hoes en hof (verhalen, Assen, 1980)
-* Gods glimlach (1984)
-* Geef mij uw hand (1985)
-* Terug naar de Bron (1987)
-* Liesterkrallen (gedichten, Zuudwolde, 1987)
-* Groeien naar het licht (1990)
-* Stemmen in de wind (1997)
-* Het zingende zaand (gedichten, Zuudwolde, 2004)
+* Het spinnewiel (gedichten, Assen, [[1978]])
+* De draod löp deur (gedichten, Assen, [[1980]])
+* Um hoes en hof (verhalen, Assen, [[1980]])
+* Gods glimlach ([[1984]])
+* Geef mij uw hand ([[1985]])
+* Terug naar de Bron ([[1987]])
+* Liesterkrallen (gedichten, Zuudwolde, [[1987]])
+* Groeien naar het licht ([[1990]])
+* Stemmen in de wind ([[1997]])
+* Het zingende zaand (gedichten, Zuudwolde, [[2004]])
 
 ==Bronnen==
 * [http://www.encyclopediedrenthe.nl/Alberts-Hofman,%20Janny Encyclopedie Drenthe Online]
