*Empty MediaWiki Message*

--- a/Abchazie.mw
+++ b/Abchazie.mw
@@ -19,6 +19,7 @@ De unafhangelikheid van Abchazie wördde samen mid dee van [[Süüdossetie]] erk
 == Üütgånde verwysingen ==
 {{Commonscat|Abkhazia}}
 
-{{Commonscat}}
+{{Dialekt|wvel||Nysassiske Skryvwyse}}
+
 [[Kategorie:Laand]]
 [[Kategorie:Europa]]
