--- a/Abchazie.mw
+++ b/Abchazie.mw
@@ -1,11 +1,11 @@
 [[Bestaand:Europe_location_ABX.png|duum|Ligging van Abchazie in Europa. Et land ligt krekt ten westen van Georgie.]]
 [[Bestaand:Abkhazia02.png|rechts|duum|Abchazie]]
 [[Bestaand:Ritsa1.jpg|duum|Et Ritsamear. Abchazie is een bargachtig gebeed mid een subtropisk klimaat. Et gebeed steyt ouk bekend üm syn stranden.]]
-'''Abchazie''' ([[abchazisk]]: Аҧсны ''Apsny,'' [[georgisk]]: აფხაზეთი ''Apkhazeti'' of ''Abkhazeti,'' [[Russisch|russisk]]: Абха́зия ''Abchazia'') is een neet-erkende ståt mid een uppervlakde van so'n 8.600 km² eleagen in de [[Kaukasus]]. De höyvdstad is Sukhumi. Andere städen binnen under andere [[Gagra]] an de küst van de [[Zwatte Zee|Swarte Sey]], dat vöäral bekend stünd turistenbestemming in de [[Sovjetuny|sovjettyd]]. 
+'''Abchazie''' ([[abchazisk]]: Аҧсны ''Apsny,'' [[georgisk]]: აფხაზეთი ''Apchazeti'', [[Russisch|russisk]]: Абха́зия ''Abchazia'', [[armeensk]]: Աբխազիա ''Abchazia'') is een neet-erkende ståt mid een uppervlakde van so'n 8.600 km² eleagen in de [[Kaukasus]]. De höyvdstad is Suchumi. Andere städen binnen under andere [[Gagra]] an de küst van de [[Zwatte Zee|Swarte Sey]], dat vöäral bekend stünd turistenbestemming in de [[Sovjetuny|sovjettyd]]. 
 
-Abchazie wördt döär een bült landen erkend as een [[autonome republik]] van [[Georgië|Georgie]] en döär anderen as een unafhangelik land, et formde vöär de val van de Sovjetuny de Abchaziske Autonome Sovjetrepublik ([[Abchaziske ASSR]]) binnen de [[Georgiske SSR]]. Nå een upstand in [[1990-1999|jåren 1990]] had et groutste gedeylde van et gebeed sik [[De fakto|de facto]] losemaked van de rest van Georgie. Dit gebeed wördt vandage de dag militäär bestüürd döär [[Ruslaand|Rusland]]. Abchazie gebrüükt de russiske rubel as betaalmiddel. Sinds 2006 givt Rusland ouk russiske paspoorten üüt an abchaziske inwuners. 
+Abchazie wördt döär een bült landen erkend as een [[autonome republik]] van [[Georgië|Georgie]] en döär anderen as een unafhangelik land, et formde vöär de val van de Sovjetuny de Abchaziske Autonome Sovjetrepublik ([[Abchaziske ASSR]]) binnen de [[Georgiske SSR]]. Nå een upstand in [[1990-1999|jåren 1990]] had et groutste gedeylde van et gebeed sik [[De fakto|de facto]] losemaked van de rest van Georgie. Dit gebeed wördt vandage de dag militäär bestüürd döär [[Ruslaand|Rusland]]. Abchazie gebrüükt de russiske rubel as betaalmiddel. Sinds 2006 givt Rusland ouk russiske paspoorten üüt an abchaziske börgers. 
 
-De Kodori-vallei in et süüdousten van et gebeed en de Gali-provinsy in et süden wörden bestüürd döär de georgiske centrale regering. De Gali-provinsy wördt vöärnamelik bevolked döär etniske georgiers. Nåst de afskeidingsregering in Sukhumi is der ouk een rivaliserende progeorgiske provinsiale regering, dee opereert vanüüt de stad Chkhalta in et boavenste gedeylde van de Kodori-vallei, een gebeed dat primäär bevolked wördt döär de an georgiers verwandede svaneten. 
+De Kodori-vallei in et süüdousten van et gebeed en de Gali-provinsy in et süden wörden bestüürd döär de georgiske centrale regering. De Gali-provinsy wördt vöärnamelik bevolked döär etniske georgiers. Nåst de afskeidingsregering in Suchumi is der ouk een rivaliserende progeorgiske provinsiale regering, dee opereert vanüüt de stad Tsjchalta in et boavenste gedeylde van de Kodori-vallei, een gebeed dat primäär bevolked wördt döär de an georgiers verwandede svaneten. 
 
 De totale bevolking van Abchazie in 1989 wördde eskatted up ungevear 525.000, wårvan 240.000 georgiers, 93.000 abchazen, 80.000 russen, 77.000 armeniers en 15.000 gryken. 
 
@@ -14,7 +14,22 @@ Vanweagen gevechten in et vöärst van de [[1990-1999|jåren '90]] wördden etni
 Et totale antal inwuners van Abchazie is unseaker, mär wördt eskatted up ungevear 200.000.
 
 == Ståten dee Abchazie en Süüdossetie formeel as unafhangelik erkend hebben ==
-De unafhangelikheid van Abchazie wördde samen mid dee van [[Süüdossetie]] erkend döär Rusland up [[26 augustus]] [[2008]], later hebben [[Nicaragua]], [[Venezuela]], en de dree kleine eilandståten in de [[Stille Oceaan]] [[Nauro|Nauru]], Vanuatu en [[Tuvalu]] de twey regios as unafhangelik erkend.
+De unafhangelikheid van Abchazie wördde samen mid dee van [[Süüdossetie]] erkend döär Rusland up [[26 augustus]] [[2008]], later hebben [[Nicaragua]], [[Venezuela]], en de dree kleine eilandståten in de [[Stille Oceaan]] [[Nauro|Nauru]], [[Vanuatu]] en [[Tuvalu]] de twey regios as unafhangelik erkend.
+
+== Bestüürlike indeyling ==
+Abchazie is verdeyld in söäven distrikten (abchazisk: араион, ''araion''; russisk: район, ''rajon''):
+
+[[Bestaand:Abkhazia districts map numbered.svg|thumb|left|
+1) [[Gagra]]
+2) [[Gudauta]]
+3) [[Suchumi]]
+4) [[Gulripsji]]
+5) [[Otsjamtsjyra]]
+6) [[Tkvarchel]]
+7) [[Gali]]
+]]{{-}}
+
+De höyvdstad Suchumi maakt geen deyl üüt van een distrikt. De distrikten kennen as underverdeyling de stad (aқалақь, ''akalak'''/город, ''gorod'') en et darp (ақыҭа, ''akyta''/cело, ''selo'').
 
 == Üütgånde verwysingen ==
 {{Commonscat|Abkhazia}}
